crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__kabira_vindicator_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 388
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetPower",
          "value": 3
        },
        {
          "type": "SetToughness",
          "value": 6
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 2,
        "maximum": 4
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "LEVEL 2-4 / 3/6"
    },
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": "You",
        "properties": [
          {
            "type": "Another"
          }
        ]
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 1
        },
        {
          "type": "AddToughness",
          "value": 1
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 2,
        "maximum": 4
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Other creatures you control get +1/+1."
    },
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetPower",
          "value": 4
        },
        {
          "type": "SetToughness",
          "value": 8
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 5
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "LEVEL 5+ / 4/8"
    },
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": "You",
        "properties": [
          {
            "type": "Another"
          }
        ]
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 2
        },
        {
          "type": "AddToughness",
          "value": 2
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 5
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Other creatures you control get +2/+2."
    }
  ],
  "replacements": [],
  "extractedKeywords": [
    {
      "LevelUp": {
        "type": "Cost",
        "shards": [
          "White"
        ],
        "generic": 2
      }
    }
  ]
}
