crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__karn_legacy_reforged_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "Phase",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Mana",
          "produced": {
            "type": "Colorless",
            "count": {
              "type": "Ref",
              "qty": {
                "type": "ObjectCount",
                "filter": {
                  "type": "Typed",
                  "type_filters": [
                    "Artifact"
                  ],
                  "controller": "You",
                  "properties": []
                }
              }
            }
          },
          "restrictions": [
            {
              "SpellTypeOrAbilityActivation": {
                "spell_type": "Artifact",
                "ability": "Any"
              }
            }
          ],
          "expiry": "EndOfTurn"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false,
        "is_mana_ability": true
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": "Upkeep",
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "At the beginning of your upkeep, add {C} for each artifact you control. This mana can't be spent to cast nonartifact spells. Until end of turn, you don't lose this mana as steps and phases end.",
      "constraint": {
        "type": "OnlyDuringYourTurn"
      },
      "condition": null,
      "batched": false
    }
  ],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetDynamicPower",
          "value": {
            "type": "Ref",
            "qty": {
              "type": "PropertyAggregate",
              "function": "Max",
              "property": "ManaValue",
              "source": {
                "type": "Objects",
                "filter": {
                  "type": "Typed",
                  "type_filters": [
                    "Artifact"
                  ],
                  "controller": "You",
                  "properties": []
                }
              }
            }
          }
        },
        {
          "type": "SetDynamicToughness",
          "value": {
            "type": "Ref",
            "qty": {
              "type": "PropertyAggregate",
              "function": "Max",
              "property": "ManaValue",
              "source": {
                "type": "Objects",
                "filter": {
                  "type": "Typed",
                  "type_filters": [
                    "Artifact"
                  ],
                  "controller": "You",
                  "properties": []
                }
              }
            }
          }
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": true,
      "description": "~'s power and toughness are each equal to the greatest mana value among artifacts you control."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
